@@ -1,3 +1,10 @@
+2014-10-07  Anders Carlsson  <andersca@apple.com>
+
+        Try to fix the Windows build.
+
+        * wtf/text/StringView.cpp:
+        (WTF::StringView::UnderlyingString::UnderlyingString):
+
 2014-10-06  Darin Adler  <darin@apple.com>
 
         Make StringView check the lifetime of the StringImpl it's created from
